--- a/client/src/components/clientView/nav/index.css
+++ b/client/src/components/clientView/nav/index.css
@@ -1,3 +1,16 @@
 .popover {
   @apply relative bg-white;
 }
+
+.facebook-login {
+  @apply py-2 px-4 ml-2 border-blue-500 rounded-md;
+  border: 1px solid rgb(118, 118, 118, 0.5);
+}
+
+.facebook-icon {
+  margin-right: 5px;
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  fill: currentcolor;
+}
